<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Day Count Widget</string>
    <string name="days_since">Days Since</string>
    <string name="days_left">Days Left</string>
    <string name="no_data">-</string>
    <string name="enter_title">(Tap here to edit title)</string>
    <string name="ok">OK</string>
    <string name="what">What</string>
    <string name="title_activity_day_count_detail_dialog">DayCountDetailDialog</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="style">Style</string>
    <string name="header">Header</string>
    <string name="body">Body</string>
    <string name="detail_days_since">days since</string>
    <string name="detail_days_left">days left until</string>
    <string name="language_settings">Language Settings</string>
    <string-array name="language_list">
        <item>English</item>
        <item>繁體中文</item>
    </string-array>

</resources>
