<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:orientation="vertical" >
 
    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:background="#F5F1DE"
        android:layout_gravity="center_horizontal"
        android:calendarViewShown="false" />

    <LinearLayout style="@style/ItemRow">
        
        <TextView
            android:id="@+id/txt_days_since_left"
            style="@style/TextTitle"
            android:text="@string/days_since" />
        
        <TextView
        	android:id="@+id/txt_days_count"
        	style="@style/TextContent"
        	android:text="@string/no_data" />
        
    </LinearLayout>
    
    <LinearLayout style="@style/ItemRow">
        
        <TextView
        	style="@style/TextTitle"
        	android:text="@string/what" />
        
        <EditText 
        	android:id="@+id/edt_title"
        	style="@style/TextContent"
        	android:textColorHint="#FFFFFF"
        	android:hint="@string/enter_title"
        	android:singleLine="true"
        	android:imeOptions="actionDone" />
        
    </LinearLayout>
    
    <LinearLayout
		style="@style/ItemRow" >
        
        <TextView
        	android:layout_width="70dp"
        	android:layout_height="90dp"
        	android:background="#16A085"
        	android:textColor="#FFFFFF"
        	android:textSize="20sp"
        	android:gravity="center"
        	android:text="@string/style" />
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:orientation="vertical" >
            
            <Button 
                android:id="@+id/btn_change_header_color"
        		android:layout_width="100dp"
        		android:layout_height="0dp"
        		android:layout_weight="1"
        		android:background="#16A085"
        		android:textColor="#FFFFFF"
        		android:textSize="20sp"
        		android:text="@string/header" />
            
    		<Button 
    		    android:id="@+id/btn_change_body_color"
        		android:layout_width="100dp"
        		android:layout_height="0dp"
        		android:layout_weight="1"
        		android:background="#1ABC9C"
        		android:textColor="#FFFFFF"
        		android:textSize="20sp"
        		android:text="@string/body" />
    		
        </LinearLayout>
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <LinearLayout 
        	android:id="@+id/sample_widget_body" 
            android:layout_width="70dp"
  	    	android:layout_height="70dp"
  	    	android:orientation="vertical"
  	    	android:background="@drawable/shape_body1">
                
            	<TextView 
  	    			android:id="@+id/sample_widget_header"
  	    			android:layout_width="match_parent"
  	    			android:layout_height="15dp"
  	    			android:gravity="center"
  	    			android:textColor="#FFFFFF"
  	    			android:background="@drawable/shape_header1"
  	    			android:textSize="12sp" />
    		
  				<TextView
					android:layout_width="match_parent"
					android:layout_height="55dp"
					android:gravity="center"
					android:textColor="#FFFFFF"
					android:textSize="28sp" />
			</LinearLayout>
        </RelativeLayout>
    	
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <Button 
        	android:id="@+id/btn_ok"
        	style="@style/ButtonConfirm"
        	android:layout_alignParentBottom="true"
        	android:text="@string/ok" />
    </RelativeLayout>
    
</LinearLayout>
